# amiga_voxel_engine

./: .gitignore  .gitmodules  .info  CMakeCache.txt  CMakeLists.txt  Disk.info  HEROQUES.SND  Makefile  README.md  cmake_install.cmake  color.raw  color10.raw  color2.raw  color3.raw  depend  engine  engine.c  engine.exec  height.raw  height0.raw  height1.raw  height10.raw  height2.raw  height3.raw  height4.raw  height5.raw  height6.raw  height7.raw  height8.raw  height9.raw  icarus_rising.tos  makefile_amiga  makefile_atari  palette.raw  testikbd.tos  voxel.asm
ace/: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
atarist-crossgcc-master/: Dockerfile  atari-m68k-repo.key  atari-m68k.list
data/: c1  c10  c11  c2  c6  c9  color8  expl  expll  fin  finish  h1  h10  h11  h4  h9  height1  height11  height2  height3  height3.raw  height5  height5.raw  height6  height7  height8  height9  height9.raw  icar  icar32  icar48  iexpl  l1  l2  l3  land  m0  m1  m2  menu0  (+6 more)
data_a/: i4
data_atari/: color1  color2  color3  color7  finish  height10  height3  logo1  logo2  logo3  menu1  palette
ikbd/: CMakeLists.txt  Makefile  README.txt  depend  ikbd.S  ikbd.h  ikbd_joy.tos  keys.c  main.c  main_joy.c  mouse.c  startup.S  testikbd.tos
sndh/: sndh.c  sndh.h  sndhisr.S
src/: bitmap.c  bitmap_filters.c  cutscene.c  dithering.c  draw_maps.c  draw_maps_amiga.c  draw_maps_atari.c  draw_screen.c  draw_screen_amiga.c  draw_screen_atari.c  draw_ships.c  draw_sprite.c  drawing.c  engine.c  engine.h  engine_temp.c  file_platform.h  file_read.c  font_platform.h  game_state.c  hello.tos  input_handling.c  input_handling_amiga.c  input_handling_atari.c  input_platform.h  key_map_atari.h  logo_state.c  main.c  main_atari.c  map_streaming.c  memory_platform.h  menu_state.c  mipmaps.c  music.s  physics.c  platform.h  ptplayer.asm  ptplayer.h  ray_cast_calculate.c  ray_casting.c  (+16 more)
src_atari/: draw_maps_atari.c  draw_screen_atari.c  draw_sprite_atari.c  input_handling_atari.c  key_map_atari.h  main_atari.c  ray_casting_atari.c  ray_casting_atari_falcon.c  ray_casting_atari_st.c  (+4 more)
(+185 files in other folders)
